# agentworx

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tracetest.py
.claude/: settings.local.json
docs/: AgentArchitecture.graffle  scratchpad.py
docs/worklog/: day1.md
scripts/: configure.py
sengy/: config.py  sengy.py
sengy/agent/: __init__.py  agent.py  github_graph.py  jira_graph.py  sengy_graph.py
sengy/eval/: __init__.py  config.py  datasets.py  demo_evaluation.py  github_datasets.py  github_evaluator.py  langsmith_evaluator.py  run_evaluation.py  run_github_evaluation.py  test_framework.py
sengy/node/: analysis.py  github.py  jira.py  summarise.py  utils.py
tests/: fixtures.py  test_github_api.py  test_github_config.py  test_github_documents.py  test_github_graph.py  test_github_toolkit.py  test_jira_utils.py  test_map_reduce_tools.py  test_utils.py
